--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
+     {% comment %} vevol-test {% endcomment %}
+    <link href="{{ 'vevol-tabs.css' | asset_url }}" rel="stylesheet">
     <link rel="canonical" href="{{ canonical_url }}">
+
+   
 
     {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
@@ -31,6 +35,10 @@
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+
+     {% comment %} vevol-test {% endcomment %}
+    <script src="{{ 'vevol-tabs.js' | asset_url }}" defer="defer"></script>
+
     {%- if settings.animations_reveal_on_scroll -%}
       <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
