--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-     {% comment %} vevol-test {% endcomment %}
+     {% comment %} vevol-test - css {% endcomment %}
     <link href="{{ 'vevol-tabs.css' | asset_url }}" rel="stylesheet">
     <link rel="canonical" href="{{ canonical_url }}">
-
-   
 
     {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
@@ -18,6 +16,11 @@
     {%- unless settings.type_header_font.system? and settings.type_body_font.system? -%}
       <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     {%- endunless -%}
+
+     {% comment %} vevol-test - fonts{% endcomment %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@0,400;0,500;0,600&display=swap" rel="stylesheet">
 
     <title>
       {{ page_title }}
@@ -36,7 +39,7 @@
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
 
-     {% comment %} vevol-test {% endcomment %}
+     {% comment %} vevol-test - js{% endcomment %}
     <script src="{{ 'vevol-tabs.js' | asset_url }}" defer="defer"></script>
 
     {%- if settings.animations_reveal_on_scroll -%}
