--- a/assets/vevol-tabs.css
+++ b/assets/vevol-tabs.css
@@ -1,55 +1,32 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-body {
-  background-color: #4d5bf9;
-}
 .tabs {
   width: 80vmin;
-  position: absolute;
-  transform: translateX(-50%);
-  left: 50%;
-  top: 120px;
+  margin: 0 auto; /* Merkezlemek için */
   background-color: #ffffff;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
 }
+
 .tab-buttons {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex; /* Flex container oluşturmak için */
 }
-.label {
-  background-color: #e4e9fd;
+
+.tab-button {
+  flex: 1; /* Eşit genişlik dağıtmak için */
   text-align: center;
   padding: 15px 0;
   cursor: pointer;
   font-weight: 600;
+  background-color: #e4e9fd;
 }
+
 .tab-content {
   background-color: #ffffff;
   padding: 50px 40px;
 }
-.tab-content h4 {
-  font-size: 28px;
-  margin-bottom: 20px;
-  color: #000224;
-  font-weight: 600;
-}
-.tab-content p {
-  text-align: justify;
-  line-height: 1.9;
-  letter-spacing: 0.4px;
-  color: #202238;
-}
-.tab-content div {
+
+.inner-content {
   display: none;
 }
-.tab-content .active {
+
+.active {
   display: block;
-}
-.tabs .active {
-  background-color: #ffffff;
-  color: #4d5bf9;
 }
