--- a/assets/vevol-tabs.css
+++ b/assets/vevol-tabs.css
@@ -1,6 +1,6 @@
 .container {
   width: 80vmin;
-  margin: 0 auto; /* Merkezlemek için */
+  margin: 0 auto;
   background-color: #ffffff;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
 }
@@ -21,9 +21,6 @@
 .tab-content {
   background-color: #ffffff;
   padding: 50px 40px;
-  line-height: 1.9;
-  letter-spacing: 0.4px;
-  color: #202238;
 }
 
 .content {
@@ -31,9 +28,6 @@
 }
 
 .active {
-  display: block;
-}
-.tab-button.active {
   background-color: #ffffff;
   color: #4d5bf9;
 }
