--- a/sections/vevol-tabs.liquid
+++ b/sections/vevol-tabs.liquid
@@ -1,5 +1,5 @@
 
-<vevol-tabs>
+<vevol-tabs class="container">
   <div class="tab-buttons" slot="tab-buttons">
     {% for tab in section.blocks %}
       <div class="tab-button" data-tab-id="{{ tab.id }}">
