--- a/sections/vevol-tabs.liquid
+++ b/sections/vevol-tabs.liquid
@@ -60,3 +60,12 @@
   ]
 }
 {% endschema %}
+
+
+{% comment %} {
+    "type": "tab",
+    "name": "Tab 1",
+    "settings": {
+      "heading": "Tab 1 heading",
+      "content": "<p>Tab 1 content</p>"
+} {% endcomment %}
